[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/game_modes/fight_mode/fight_mode_mockup.gd" type="Script" id=1]
[ext_resource path="res://assets/fight_mode_level/light_texture_proto.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemies/enemy_medium.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemies/enemy_boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/enemy_heavy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/enemy_light.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fight_mode_level/fight_mode_tileset.tres" type="TileSet" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -384, -240, 0, 0, 0, 0, 2096, -248, 0, 0, 0, 0, 2080, 1120, 0, 0, 0, 0, -384, 1120, 0, 0, 0, 0, -384, -240 )
}

[node name="FightModeMockup" type="Node"]
script = ExtResource( 1 )
enemy_light_scn = ExtResource( 7 )
enemy_medium_scn = ExtResource( 4 )
enemy_heavy_scn = ExtResource( 6 )
enemy_boss_scn = ExtResource( 5 )

[node name="BGGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1736.0
margin_top = -1280.0
margin_right = 1992.0
margin_bottom = 1220.0
color = Color( 0.160784, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="Player"]
texture = ExtResource( 2 )
texture_scale = 2.0
color = Color( 0.827451, 0.784314, 0.32549, 1 )
shadow_enabled = true

[node name="PlayerStartingPos" type="Position2D" parent="."]
position = Vector2( 808, 448 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="EnemyLightTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="EnemyMediumTimer" type="Timer" parent="."]
wait_time = 16.0

[node name="EnemyHeavyTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="EnemyBossTimer" type="Timer" parent="."]
wait_time = 40.0

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -384, -240 )
rotation = -0.00322294

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1376286, 0, 0, -1376285, 0, 0, -1376284, 0, 0, -1376283, 0, 0, -1376282, 0, 0, -1376281, 0, 0, -1376280, 0, 0, -1376279, 0, 0, -1376278, 0, 0, -1376277, 0, 0, -1376276, 0, 0, -1376275, 0, 0, -1376274, 0, 0, -1376273, 0, 0, -1376272, 0, 0, -1376271, 0, 0, -1376270, 0, 0, -1376269, 0, 0, -1376268, 0, 0, -1376267, 0, 0, -1376266, 0, 0, -1376265, 0, 0, -1376264, 0, 0, -1376263, 0, 0, -1376262, 0, 0, -1376261, 0, 0, -1376260, 0, 0, -1376259, 0, 0, -1376258, 0, 0, -1376257, 0, 0, -1441792, 0, 0, -1441791, 0, 0, -1441790, 0, 0, -1441789, 0, 0, -1441788, 0, 0, -1441787, 0, 0, -1441786, 0, 0, -1441785, 0, 0, -1441784, 0, 0, -1441783, 0, 0, -1441782, 0, 0, -1441781, 0, 0, -1441780, 0, 0, -1441779, 0, 0, -1441778, 0, 0, -1441777, 0, 0, -1441776, 0, 0, -1441775, 0, 0, -1441774, 0, 0, -1441773, 0, 0, -1441772, 0, 0, -1441771, 0, 0, -1441770, 0, 0, -1441769, 0, 0, -1441768, 0, 0, -1441767, 0, 0, -1441766, 0, 0, -1441765, 0, 0, -1441764, 0, 0, -1441763, 0, 0, -1441762, 0, 0, -1441761, 0, 0, -1441760, 0, 0, -1441759, 0, 0, -1441758, 0, 0, -1441757, 0, 0, -1441756, 0, 0, -1441755, 0, 0, -1441754, 0, 0, -1441753, 0, 0, -1441752, 0, 0, -1441751, 0, 0, -1441750, 0, 0, -1441749, 0, 0, -1441748, 0, 0, -1441747, 0, 0, -1441746, 0, 0, -1441745, 0, 0, -1441744, 0, 0, -1441743, 0, 0, -1441742, 0, 0, -1441741, 0, 0, -1441740, 0, 0, -1441739, 0, 0, -1441738, 0, 0, -1441737, 0, 0, -1441736, 0, 0, -1441735, 0, 0, -1441734, 0, 0, -1441733, 0, 0, -1441732, 0, 0, -1441731, 0, 0, -1441730, 0, 0, -1441729, 0, 0, -1441728, 0, 0, -1441727, 0, 0, -1441726, 0, 0, -1441725, 0, 0, -1441724, 0, 0, -1441723, 0, 0, -1441722, 0, 0, -1441721, 0, 0, -1441720, 0, 0, -1441719, 0, 0, -1441718, 0, 0, -1441717, 0, 0, -1441716, 0, 0, -1441715, 0, 0, -1441714, 0, 0, -1441713, 0, 0, -1441712, 0, 0, -1441711, 0, 0, -1441710, 0, 0, -1441709, 0, 0, -1441708, 0, 0, -1441707, 0, 0, -1441706, 0, 0, -1441705, 0, 0, -1441704, 0, 0, -1441703, 0, 0, -1441702, 0, 0, -1441701, 0, 0, -1441700, 0, 0, -1441699, 0, 0, -1441698, 0, 0, -1441697, 0, 0, -1441696, 0, 0, -1441695, 0, 0, -1441694, 0, 0, -1441693, 0, 0, -1441692, 0, 0, -1441691, 0, 0, -1441690, 0, 0, -1441689, 0, 0, -1441688, 0, 0, -1441687, 0, 0, -1441686, 0, 0, -1441685, 0, 0, -1441684, 0, 0, -1441683, 0, 0, -1441682, 0, 0, -1441681, 0, 0, -1441680, 0, 0, -1441679, 0, 0, -1441678, 0, 0, -1441677, 0, 0, -1441676, 0, 0, -1441675, 0, 0, -1441674, 0, 0, -1441673, 0, 0, -1441672, 0, 0, -1441671, 0, 0, -1441670, 0, 0, -1441669, 0, 0, -1441668, 0, 0, -1441667, 0, 0, -1441666, 0, 0, -1441665, 0, 0, -1441664, 0, 0, -1441663, 0, 0, -1441662, 0, 0, -1441661, 0, 0, -1441660, 0, 0, -1441659, 0, 0, -1441658, 0, 0, -1441656, 0, 0, -1310750, 0, 0, -1376120, 0, 0, -1245214, 0, 0, -1310584, 0, 0, -1179678, 0, 0, -1245048, 0, 0, -1114142, 0, 0, -1179512, 0, 0, -1048606, 0, 0, -1113976, 0, 0, -983070, 0, 0, -1048440, 0, 0, -917534, 0, 0, -982904, 0, 0, -851998, 0, 0, -917368, 0, 0, -786462, 0, 0, -851832, 0, 0, -720926, 0, 0, -786296, 0, 0, -655390, 0, 0, -720760, 0, 0, -589854, 0, 0, -655224, 0, 0, -524318, 0, 0, -589688, 0, 0, -458782, 0, 0, -524152, 0, 0, -393246, 0, 0, -458616, 0, 0, -327710, 0, 0, -393080, 0, 0, -262174, 0, 0, -327544, 0, 0, -196638, 0, 0, -262008, 0, 0, -131102, 0, 0, -196472, 0, 0, -65566, 0, 0, -130936, 0, 0, -30, 0, 0, -65400, 0, 0, 65506, 0, 0, 136, 0, 0, 131042, 0, 0, 65672, 0, 0, 196578, 0, 0, 131208, 0, 0, 262114, 0, 0, 196744, 0, 0, 327650, 0, 0, 262280, 0, 0, 393186, 0, 0, 327816, 0, 0, 458722, 0, 0, 393352, 0, 0, 524258, 0, 0, 458888, 0, 0, 589794, 0, 0, 524424, 0, 0, 655330, 0, 0, 589960, 0, 0, 720866, 0, 0, 655496, 0, 0, 786402, 0, 0, 721032, 0, 0, 851938, 0, 0, 786568, 0, 0, 917474, 0, 0, 852104, 0, 0, 983010, 0, 0, 917640, 0, 0, 1048546, 0, 0, 983176, 0, 0, 1114082, 0, 0, 1048712, 0, 0, 1179618, 0, 0, 1114248, 0, 0, 1245154, 0, 0, 1179784, 0, 0, 1310690, 0, 0, 1245320, 0, 0, 1376226, 0, 0, 1310856, 0, 0, 1441762, 0, 0, 1376392, 0, 0, 1507298, 0, 0, 1441928, 0, 0, 1572834, 0, 0, 1507464, 0, 0, 1638370, 0, 0, 1573000, 0, 0, 1703906, 0, 0, 1638536, 0, 0, 1769442, 0, 0, 1704072, 0, 0, 1834978, 0, 0, 1769608, 0, 0, 1900514, 0, 0, 1835144, 0, 0, 1966050, 0, 0, 1900680, 0, 0, 2031586, 0, 0, 1966216, 0, 0, 2097122, 0, 0, 2031752, 0, 0, 2162658, 0, 0, 2097288, 0, 0, 2228194, 0, 0, 2162824, 0, 0, 2293730, 0, 0, 2228360, 0, 0, 2359266, 0, 0, 2293896, 0, 0, 2424802, 0, 0, 2359432, 0, 0, 2490338, 0, 0, 2424968, 0, 0, 2555874, 0, 0, 2490504, 0, 0, 2621410, 0, 0, 2556040, 0, 0, 2686946, 0, 0, 2621576, 0, 0, 2752482, 0, 0, 2687112, 0, 0, 2818018, 0, 0, 2752648, 0, 0, 2883554, 0, 0, 2818184, 0, 0, 2949090, 0, 0, 2883720, 0, 0, 3014626, 0, 0, 2949256, 0, 0, 3080162, 0, 0, 3014792, 0, 0, 3145698, 0, 0, 3080328, 0, 0, 3211234, 0, 0, 3145864, 0, 0, 3276770, 0, 0, 3211400, 0, 0, 3342306, 0, 0, 3276936, 0, 0, 3407842, 0, 0, 3342472, 0, 0, 3473378, 0, 0, 3408008, 0, 0, 3538914, 0, 0, 3473544, 0, 0, 3604450, 0, 0, 3539080, 0, 0, 3669986, 0, 0, 3604616, 0, 0, 3735522, 0, 0, 3670152, 0, 0, 3801058, 0, 0, 3735688, 0, 0, 3866594, 0, 0, 3801224, 0, 0, 3932130, 0, 0, 3866760, 0, 0, 3997666, 0, 0, 3932296, 0, 0, 4063202, 0, 0, 3997832, 0, 0, 4128738, 0, 0, 4063368, 0, 0, 4194274, 0, 0, 4128904, 0, 0, 4259810, 0, 0, 4194440, 0, 0, 4325346, 0, 0, 4259976, 0, 0, 4390882, 0, 0, 4325512, 0, 0, 4456418, 0, 0, 4391048, 0, 0, 4521954, 0, 0, 4456584, 0, 0, 4587490, 0, 0, 4522120, 0, 0, 4653026, 0, 0, 4587656, 0, 0, 4718562, 0, 0, 4653192, 0, 0, 4784098, 0, 0, 4718728, 0, 0, 4849634, 0, 0, 4784264, 0, 0, 4915170, 0, 0, 4849800, 0, 0, 4980706, 0, 0, 5046242, 0, 0, 5046244, 0, 0, 5046245, 0, 0, 5046246, 0, 0, 5046247, 0, 0, 5046248, 0, 0, 5046249, 0, 0, 5046250, 0, 0, 5046251, 0, 0, 5046252, 0, 0, 5046253, 0, 0, 5046254, 0, 0, 5046255, 0, 0, 5046256, 0, 0, 5046257, 0, 0, 5046258, 0, 0, 5046259, 0, 0, 5046260, 0, 0, 5046261, 0, 0, 5046262, 0, 0, 5046263, 0, 0, 5046264, 0, 0, 5046265, 0, 0, 5046266, 0, 0, 5046267, 0, 0, 5046268, 0, 0, 5046269, 0, 0, 5046270, 0, 0, 5046271, 0, 0, 4980736, 0, 0, 4980737, 0, 0, 4980738, 0, 0, 4980739, 0, 0, 4980740, 0, 0, 4980741, 0, 0, 4980742, 0, 0, 4980743, 0, 0, 4980744, 0, 0, 4980745, 0, 0, 4980746, 0, 0, 4980747, 0, 0, 4980748, 0, 0, 4980749, 0, 0, 4980750, 0, 0, 4980751, 0, 0, 4980752, 0, 0, 4980753, 0, 0, 4980754, 0, 0, 4980755, 0, 0, 4980756, 0, 0, 4980757, 0, 0, 4980758, 0, 0, 4980759, 0, 0, 4980760, 0, 0, 4980761, 0, 0, 4980762, 0, 0, 4980763, 0, 0, 4980764, 0, 0, 4980765, 0, 0, 4980766, 0, 0, 4980767, 0, 0, 4980768, 0, 0, 4980769, 0, 0, 4980770, 0, 0, 4980771, 0, 0, 4980772, 0, 0, 4980773, 0, 0, 4980774, 0, 0, 4980775, 0, 0, 4980776, 0, 0, 4980777, 0, 0, 4980778, 0, 0, 4980779, 0, 0, 4980780, 0, 0, 4980781, 0, 0, 4980782, 0, 0, 4980783, 0, 0, 4980784, 0, 0, 4980785, 0, 0, 4980786, 0, 0, 4980787, 0, 0, 4980788, 0, 0, 4980789, 0, 0, 4980790, 0, 0, 4980791, 0, 0, 4980792, 0, 0, 4980793, 0, 0, 4980794, 0, 0, 4980795, 0, 0, 4980796, 0, 0, 4980797, 0, 0, 4980798, 0, 0, 4980799, 0, 0, 4980800, 0, 0, 4980801, 0, 0, 4980802, 0, 0, 4980803, 0, 0, 4980804, 0, 0, 4980805, 0, 0, 4980806, 0, 0, 4980807, 0, 0, 4980808, 0, 0, 4980809, 0, 0, 4980810, 0, 0, 4980811, 0, 0, 4980812, 0, 0, 4980813, 0, 0, 4980814, 0, 0, 4980815, 0, 0, 4980816, 0, 0, 4980817, 0, 0, 4980818, 0, 0, 4980819, 0, 0, 4980820, 0, 0, 4980821, 0, 0, 4980822, 0, 0, 4980823, 0, 0, 4980824, 0, 0, 4980825, 0, 0, 4980826, 0, 0, 4980827, 0, 0, 4980828, 0, 0, 4980829, 0, 0, 4980830, 0, 0, 4980831, 0, 0, 4980832, 0, 0, 4980833, 0, 0, 4980834, 0, 0, 4980835, 0, 0, 4980836, 0, 0, 4980837, 0, 0, 4980838, 0, 0, 4980839, 0, 0, 4980840, 0, 0, 4980841, 0, 0, 4980842, 0, 0, 4980843, 0, 0, 4980844, 0, 0, 4980845, 0, 0, 4980846, 0, 0, 4980847, 0, 0, 4980848, 0, 0, 4980849, 0, 0, 4980850, 0, 0, 4980851, 0, 0, 4980852, 0, 0, 4980853, 0, 0, 4980854, 0, 0, 4980855, 0, 0, 4980856, 0, 0, 4980857, 0, 0, 4980858, 0, 0, 4980859, 0, 0, 4980860, 0, 0, 4980861, 0, 0, 4980862, 0, 0, 4980863, 0, 0, 4980864, 0, 0, 4980865, 0, 0, 4980866, 0, 0, 4980867, 0, 0, 4980868, 0, 0, 4980869, 0, 0, 4980870, 0, 0, 4980871, 0, 0, 4980872, 0, 0 )
[connection signal="collided_with_enemy" from="Player" to="." method="_on_Player_collided_with_enemy"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="EnemyLightTimer" to="." method="_on_EnemyLightTimer_timeout"]
[connection signal="timeout" from="EnemyMediumTimer" to="." method="_on_EnemyMediumTimer_timeout"]
[connection signal="timeout" from="EnemyHeavyTimer" to="." method="_on_EnemyHeavyTimer_timeout"]
[connection signal="timeout" from="EnemyBossTimer" to="." method="_on_EnemyBossTimer_timeout"]
